# audvoice-voice

./: .gitignore  LICENSE  README.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
apps/orchestrator/: .env.example  Dockerfile  README.md  pyproject.toml
apps/orchestrator/audvoice/: __init__.py  aad.py  auth.py  llm.py  main.py  protocol.py  rag.py  session.py  settings.py  stt.py  tts.py
apps/web-demo/: demo.js  index.html
docs/: deployment.md  getting-started.md  index.md  integration-agent-framework.md  llm-backends.md  operations.md  protocol.md  sdk.md
docs/diagrams/: generate.py
infra/: main.bicep  main.bicepparam  minimal.bicep  services.bicep
tests/: conftest.py  live_arabic.py  live_smoke.py  live_ws.py  test_auth.py  test_protocol.py  test_session.py
