[project]
name = "audvoice-orchestrator"
version = "0.1.0"
description = "UAE-resident voice-live orchestrator (Azure Speech + Azure OpenAI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "websockets>=13",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-jose[cryptography]>=3.3",
  "azure-cognitiveservices-speech>=1.40",
  "openai>=1.50",
  "azure-identity>=1.17",
  "redis>=5.0",
  "httpx>=0.27",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
]
rag = [
  "azure-search-documents>=11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audvoice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
